# Dictionary-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: DictionaryTest.c  SyllableListTest.c  TrieTest.c  TxtDictionaryTest.c  WordTest.c
src/: CMakeLists.txt
src/Dictionary/: Dictionary.c  Dictionary.h  ExceptionalWord.c  ExceptionalWord.h  Pos.h  TxtDictionary.c  TxtDictionary.h  TxtWord.c  TxtWord.h  VectorizedDictionary.c  VectorizedDictionary.h  VectorizedWord.c  VectorizedWord.h  Word.c  Word.h
src/Dictionary/Trie/: Trie.c  Trie.h  TrieNode.c  TrieNode.h
src/Language/: EnglishLanguage.h  Language.h  TurkishLanguage.c  TurkishLanguage.h
src/Syllibification/: Syllable.c  Syllable.h  SyllableList.c  SyllableList.h
