cmake_minimum_required(VERSION 3.23)
project(Dictionary)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(math_c REQUIRED)
find_package(data_structure_c REQUIRED)

add_library(Dictionary src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h src/Dictionary/VectorizedDictionary.c src/Dictionary/VectorizedDictionary.h)
target_link_libraries(Dictionary math_c::math_c data_structure_c::data_structure_c)
add_executable(SyllableListTest src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h Test/SyllableListTest.c src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h)
target_link_libraries(SyllableListTest math_c::math_c data_structure_c::data_structure_c)
add_executable(WordTest src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h Test/WordTest.c src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h)
target_link_libraries(WordTest math_c::math_c data_structure_c::data_structure_c)
add_executable(TrieTest src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h Test/TrieTest.c src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h)
target_link_libraries(TrieTest math_c::math_c data_structure_c::data_structure_c)
add_executable(DictionaryTest src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h Test/DictionaryTest.c)
target_link_libraries(DictionaryTest math_c::math_c data_structure_c::data_structure_c)
add_executable(TxtDictionaryTest src/Language/Language.h src/Language/EnglishLanguage.h src/Language/TurkishLanguage.c src/Language/TurkishLanguage.h src/Syllibification/Syllable.c src/Syllibification/Syllable.h src/Syllibification/SyllableList.c src/Syllibification/SyllableList.h src/Dictionary/Word.c src/Dictionary/Word.h src/Dictionary/Pos.h src/Dictionary/TxtWord.c src/Dictionary/TxtWord.h src/Dictionary/ExceptionalWord.c src/Dictionary/ExceptionalWord.h src/Dictionary/VectorizedWord.c src/Dictionary/VectorizedWord.h src/Dictionary/Trie/TrieNode.c src/Dictionary/Trie/TrieNode.h src/Dictionary/Trie/Trie.c src/Dictionary/Trie/Trie.h src/Dictionary/Dictionary.c src/Dictionary/Dictionary.h src/Dictionary/TxtDictionary.c src/Dictionary/TxtDictionary.h src/Dictionary/VectorizedDictionary.c src/Dictionary/VectorizedDictionary.h Test/TxtDictionaryTest.c)
target_link_libraries(TxtDictionaryTest math_c::math_c data_structure_c::data_structure_c)
